@@ -1,5 +1,7 @@
 --TEST--
 import_request_variables() test (numeric keys)
+--SKIPIF--
+<?php if(PHP_VERSION_ID < 503099){ die('Not needed anymore without register_globals'); } ?>
 --GET--
 1=0&2=1&3=2&4=3&5=4
 --POST--
